--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -18,6 +18,7 @@
     <Deterministic>true</Deterministic>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <TargetFramework>net6.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
@@ -36,25 +37,35 @@
     </Compile>
   </ItemGroup>
 
-  <!-- Below are items and properties that vary between projects -->
-  <!-- Common framework and tooling PackageReference elements are also kept in sync here -->
   <Choose>
-    <When Condition="$(MSBuildProjectName.EndsWith('Test'))">
+    <When Condition="$(MSBuildProjectName.EndsWith('.Test'))">
 
-      <!-- Unit Test Properties -->
       <PropertyGroup>
-        <IsPackable>false</IsPackable>
+        <SourceProjectName>$(MSBuildProjectName.Substring(0, $([MSBuild]::Subtract($(MSBuildProjectName.Length), 5))))</SourceProjectName>
       </PropertyGroup>
 
-      <!-- Test Framework Packages -->
+      <ItemGroup>
+        <ProjectReference Include="..\Keda.Scaler.DurableTask.AzureStorage\$(SourceProjectName).csproj" />
+      </ItemGroup>
+
       <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="3.1.0" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" PrivateAssets="All" />
-        <PackageReference Include="MSTest.TestAdapter" Version="2.2.5" PrivateAssets="All" />
-        <PackageReference Include="MSTest.TestFramework" Version="2.2.5" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" PrivateAssets="All" />
+        <PackageReference Include="Moq" Version="4.16.1" />
+        <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" PrivateAssets="All" />
+        <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
       </ItemGroup>
 
     </When>
+    <Otherwise>
+
+      <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+          <_Parameter1>$(MSBuildProjectName).Test</_Parameter1>
+        </AssemblyAttribute>
+      </ItemGroup>
+
+    </Otherwise>
   </Choose>
 
 </Project>
