Fix code coverage action name

--- a/.github/actions/dotnet-package/action.yml
+++ b/.github/actions/dotnet-package/action.yml
@@ -9,7 +9,7 @@ inputs:
     description: The dotnet build configuration
     required: false
   versionFile:
-    default: './src/Version.json'
+    default: './Version.json'
     description: The product version
     required: false
   buildId:
