Create Initial Actions (#2)
- Add PR and CI actions
  - Publish services binaries
  - Publish code coverage
- Fix dependencies
- Clean-up solution
- Add version file

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,7 +5,7 @@
     <SrcDirectory>$(MSBuildThisFileDirectory)</SrcDirectory>
     <SharedDirectory>$(SrcDirectory)Shared\</SharedDirectory>
   </PropertyGroup>
-  
+
   <!-- Assembly -->
   <PropertyGroup>
     <Copyright>Copyright © 2021 William Sugarman.</Copyright>
@@ -16,8 +16,10 @@
   <!-- Build -->
   <PropertyGroup>
     <Deterministic>true</Deterministic>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <RunSettingsFilePath>$(SrcDirectory)CodeCoverage.runsettings</RunSettingsFilePath>
     <TargetFramework>net6.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
@@ -35,6 +37,11 @@
     <Compile Include="$(SharedDirectory)AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
+  </ItemGroup>
+
+  <!-- Tools -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
   <Choose>
