--- a/.github/actions/code-coverage/action.yml
+++ b/.github/actions/code-coverage/action.yml
@@ -7,16 +7,20 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Generate Code Coverage Report
-      uses: danielpalme/ReportGenerator-GitHub-Action@4.8.12
-      with:
-        reports: ${{ inputs.reportPath }}
-        reporttypes: HTMLInline;Cobertura;Badges
-        targetdir: ${{ runner.temp }}/codecoverage
+    - name: Copy Code Coverage
+      shell: pwsh
+      run: |
+        New-Item -ItemType 'directory' -Path '${{ runner.temp }}/codecoverage/' | Out-Null
+        Copy-Item '${{ inputs.reportPath }}' -Destination '${{ runner.temp }}/codecoverage/'
 
     - name: Upload Code Coverage Report
       uses: actions/upload-artifact@v2.2.3
       with:
-        name: CodeCoverage
-        path: ${{ runner.temp }}/codecoverage/
-        if-no-files-found: error
+        name: Coverage
+        path: ${{ runner.temp }}/codecoverage
+
+    - name: Codecov Upload
+      uses: codecov/codecov-action@v2.1.0
+      with:
+        files: ${{ runner.temp }}/codecoverage/coverage.cobertura.xml
+        fail_ci_if_error: true
