--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -7,8 +7,8 @@ on:
     - README.md
 
 jobs:
-  validate:
-    name: Validate
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Test
-        uses: ./.github/actions/dotnet-validate
+        uses: ./.github/actions/dotnet-test
         with:
           solution: Scaler
           resultsDirectory: ${{ runner.temp }}/TestResults
@@ -26,17 +26,17 @@ jobs:
         with:
           reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
 
-  package:
-    name: Package
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Package
-        uses: ./.github/actions/dotnet-package
+      - name: Publish
+        uses: ./.github/actions/dotnet-publish
         with:
           project: Keda.Scaler.DurableTask.AzureStorage
           buildConfiguration: Release
-          buildId: ${{ github.run_attempt }}
+          pullRequestNumber: ${{ github.event.pull_request.number }}
