--- a/charts/durabletask-azurestorage-external-scaler/templates/deployment.yaml
+++ b/charts/durabletask-azurestorage-external-scaler/templates/deployment.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}
+      {{- include "durabletask-azurestorage-external-scaler.matchLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
