--- a/charts/durabletask-azurestorage-external-scaler/templates/clusterrole.yaml
+++ b/charts/durabletask-azurestorage-external-scaler/templates/clusterrole.yaml
@@ -1,9 +1,8 @@
 {{- if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: {{ template "durabletask-azurestorage-external-scaler.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "durabletask-azurestorage-external-scaler.labels" . | nindent 4 }}
 rules:
@@ -17,7 +16,7 @@ rules:
   - ""
   resources:
   - deployments/scale
-  - scaledsets/scale
+  - statefulsets/scale
   verbs:
   - get
 {{- end -}}
