--- a/charts/durabletask-azurestorage-external-scaler/templates/clusterrolebinding.yaml
+++ b/charts/durabletask-azurestorage-external-scaler/templates/clusterrolebinding.yaml
@@ -1,17 +1,16 @@
 {{- if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: {{ template "durabletask-azurestorage-external-scaler.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "durabletask-azurestorage-external-scaler.labels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ template "durabletask-azurestorage-external-scaler.fullname" . }}
 subjects:
 - kind: ServiceAccount
   name: {{ template "durabletask-azurestorage-external-scaler.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: {{ template "durabletask-azurestorage-external-scaler.fullname" . }}
 {{- end -}}
