--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,5 @@ coverage:
   status:
     project:
       default:
-        target: 95%
+        target: auto
         threshold: 0%
-        base: 95%
