--- a/codecov.yml
+++ b/codecov.yml
@@ -2,5 +2,9 @@ coverage:
   status:
     project:
       default:
-        target: auto
+        target: 95%
+        threshold: 0%
+    patch: 
+       default:
+        target: 95%
         threshold: 0%
