--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,11 @@
 root = true
 
 # Default settings:
-# A newline ending every file
-# Use 4 spaces as indentation
+# - UTF-8
+# - Posix-style newline ending every file
+# - Use 4 spaces as indentation
 [*]
+charset              = utf-8
 insert_final_newline = true
 indent_style         = space
 indent_size          = 4
@@ -44,5 +46,6 @@ indent_size = 2
 # Shell scripts
 [*.sh]
 end_of_line = lf
+
 [*.{cmd,bat}]
 end_of_line = crlf
