Fix result dir option

--- a/.github/actions/dotnet-test/action.yml
+++ b/.github/actions/dotnet-test/action.yml
@@ -18,6 +18,14 @@ runs:
     - name: Setup
       uses: actions/setup-dotnet@v3
 
+    - name: Build
+      shell: bash
+      run: |
+        dotnet build "./src/${{ inputs.solution }}.sln" \
+          -c "${{ inputs.buildConfiguration }}" \
+          -p:ContinuousIntegrationBuild=true \
+          -warnaserror
+
     - name: Test
       shell: bash
       run: |
@@ -25,7 +33,8 @@ runs:
           -c "${{ inputs.buildConfiguration }}" \
           -p:ContinuousIntegrationBuild=true \
           -warnaserror \
-          -r "${{ inputs.resultsDirectory }}" \
+          --no-build \
+          --results-directory "${{ inputs.resultsDirectory }}" \
           --collect "XPlat Code Coverage" \
           -s "$GITHUB_WORKSPACE/src/CodeCoverage.runsettings" \
           -v normal
