--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,30 @@ updates:
       timezone: "America/Los_Angeles"
     open-pull-requests-limit: 10
 
+  - package-ecosystem: "github-actions"
+    directory: "/actions/code-coverage"
+    schedule:
+      interval: "daily"
+      time: "09:00"
+      timezone: "America/Los_Angeles"
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: "github-actions"
+    directory: "/actions/dotnet-publish"
+    schedule:
+      interval: "daily"
+      time: "09:00"
+      timezone: "America/Los_Angeles"
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: "github-actions"
+    directory: "/actions/dotnet-test"
+    schedule:
+      interval: "daily"
+      time: "09:00"
+      timezone: "America/Los_Angeles"
+    open-pull-requests-limit: 10
+
   - package-ecosystem: "nuget"
     directory: "/src"
     schedule:
