--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,5 +1,4 @@
 <Project>
-
   <ItemGroup>
     <PackageVersion Include="Azure.Data.Tables" Version="12.7.1" />
     <PackageVersion Include="Azure.Identity" Version="1.8.0" />
@@ -17,7 +16,7 @@
     <PackageVersion Include="Moq" Version="4.18.3" />
     <PackageVersion Include="MSTest.TestAdapter" Version="3.0.0" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.0.0" />
+    <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
     <PackageVersion Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
-
 </Project>
