--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,22 +1,18 @@
 <Project>
-
   <ItemGroup>
     <PackageVersion Include="Azure.Identity" Version="1.8.0" />
+    <PackageVersion Include="Azure.Storage.Blobs" Version="12.14.1" />
+    <PackageVersion Include="Azure.Storage.Queues" Version="12.12.0" />
     <PackageVersion Include="coverlet.collector" Version="3.2.0" />
-    <PackageVersion Include="Google.Protobuf" Version="3.21.11" />
+    <PackageVersion Include="Google.Protobuf" Version="3.21.12" />
     <PackageVersion Include="Grpc.AspNetCore.Server" Version="2.50.0" />
     <PackageVersion Include="Grpc.Core.Api" Version="2.50.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.51.0" />
-    <PackageVersion Include="KubernetesClient" Version="9.1.3" />
-    <PackageVersion Include="Microsoft.Azure.DurableTask.AzureStorage" Version="1.13.2" />
-    <PackageVersion Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageVersion Include="Moq" Version="4.18.3" />
-    <PackageVersion Include="MSTest.TestAdapter" Version="3.0.0" />
-    <PackageVersion Include="MSTest.TestFramework" Version="3.0.0" />
-    <PackageVersion Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageVersion Include="MSTest.TestAdapter" Version="3.0.1" />
+    <PackageVersion Include="MSTest.TestFramework" Version="3.0.1" />
   </ItemGroup>
-
 </Project>
