--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,4 +1,5 @@
 <Project>
+
   <ItemGroup>
     <PackageVersion Include="Azure.Identity" Version="1.8.0" />
     <PackageVersion Include="Azure.Storage.Blobs" Version="12.14.1" />
@@ -8,6 +9,10 @@
     <PackageVersion Include="Grpc.AspNetCore.Server" Version="2.50.0" />
     <PackageVersion Include="Grpc.Core.Api" Version="2.50.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.51.0" />
+    <PackageVersion Include="Microsoft.Azure.WebJobs.Core" Version="3.0.33" />
+    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.9.0" />
+    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.DurableTask.Analyzers" Version="0.5.0" />
+    <PackageVersion Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
@@ -15,4 +20,5 @@
     <PackageVersion Include="MSTest.TestAdapter" Version="3.0.1" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.0.1" />
   </ItemGroup>
+
 </Project>
